--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ target/
 !**/src/test/**/target/
 
 ### Front End ###
-/src/main/frontend/node_modules
+/src/main/frontend
 
 ### Env Variables ###
 /src/main/resources/application.properties
